fix visible state from scrollbars

--- a/assets/default/extended_ui.css
+++ b/assets/default/extended_ui.css
@@ -60,7 +60,7 @@ checkbox .check-text {
 /* Div */
 
 div {
-    position: relative;
+    scroll-width: 10;
 }
 
 div scroll {
